refactor: rely on new Java features and simplify code